<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddTravelDetailFragment">

    <EditText
        android:id="@+id/entry_details_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/title"
        android:selectAllOnFocus="true"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Journey to Nepal" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_date_created"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="false"
        android:fontFamily="sans-serif"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/entry_details_title"
        tools:text="August 31 13:55" />

    <EditText
        android:id="@+id/entry_details_description"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/add_description"
        android:paddingTop="4dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/txt_date_created"
        tools:text="@string/lorem_ipsum" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/more_action_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/actions"
        app:icon="@android:drawable/ic_menu_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/more_action_fab"
        app:layout_constraintEnd_toEndOf="@+id/more_action_fab"
        app:srcCompat="@android:drawable/ic_menu_save" />

    <TextView
        android:id="@+id/save_action_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="@+id/save_fab"
        app:layout_constraintEnd_toStartOf="@+id/save_fab"
        app:layout_constraintTop_toTopOf="@+id/save_fab" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_pic_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/save_fab"
        app:layout_constraintEnd_toEndOf="@+id/save_fab"
        app:layout_constraintStart_toStartOf="@+id/save_fab"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <TextView
        android:id="@+id/add_pic_action_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/add_picture"
        app:layout_constraintBottom_toBottomOf="@+id/add_pic_fab"
        app:layout_constraintEnd_toStartOf="@+id/add_pic_fab"
        app:layout_constraintTop_toTopOf="@+id/add_pic_fab" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_loc_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/add_pic_fab"
        app:layout_constraintEnd_toEndOf="@+id/add_pic_fab"
        app:layout_constraintStart_toStartOf="@+id/add_pic_fab"
        app:srcCompat="@android:drawable/ic_menu_mapmode" />

    <TextView
        android:id="@+id/add_loc_action_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/add_location"
        app:layout_constraintBottom_toBottomOf="@+id/add_loc_fab"
        app:layout_constraintEnd_toStartOf="@+id/add_loc_fab"
        app:layout_constraintTop_toTopOf="@+id/add_loc_fab" />


</androidx.constraintlayout.widget.ConstraintLayout>